Bug 507719 - Incorrect notification category for "Connection Deactivated"
Summary: Incorrect notification category for "Connection Deactivated"
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.4.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-01 05:07 UTC by Soham Dash
Modified: 2025-08-05 11:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Soham Dash 2025-08-01 05:07:13 UTC
SUMMARY
I'm trying to put sounds (for accessibility reasons) for most of my notifications, as by default, some of them do not have any sound. I wanted to add a sound for Network Management >> Connection Activated and Connection Deactivated. The sound plays fine, and I know the sound file I have provided, that is my custom sound theme's `network-connectivity-established` and `network-connectivity-lost` OGA files are valid, as they work in other notification areas. 

I noticed that the sound that plays when a connection is established (I.e. `Connection $NAME is activated`) is the same sound that plays when it is disconnected (`Connection $NAME is deactivated`). I clicked on the options menu on the popup for connection establishment, and it takes me to Connection Deactivated, which is incorrect.

STEPS TO REPRODUCE
1. Connect to WIFI via GUI
2. Wait for the popup
3. Click its option menu

OBSERVED RESULT
Connection Disconnected's options are brought up. Connection Disconnected's popup sound should play.

EXPECTED RESULT
Connection Established's options should be brought up. Connection Connected's popup sound should play.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i7-7600U CPU @ 2.80GHz
Memory: 16 GiB of RAM (15.4 GiB usable)
Graphics Processor: Intel® HD Graphics 620
Manufacturer: LENOVO
Product Name: 20HQS17403
System Version: ThinkPad X1 Carbon 5th 

ADDITIONAL INFORMATION
Considering how minor this bug is, I would love to fix it myself, but I do not have the resources to compile a whole desktop environment. I do think that it is important to fix because this is very much limiting how usable KDE Plasma is for me, and potentially other users.
Comment 1 Bug Janitor Service 2025-08-04 13:36:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/458
Comment 2 Soham Dash 2025-08-05 09:38:46 UTC
(In reply to Bug Janitor Service from comment #1)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/plasma-nm/-/merge_requests/458

Looks relevant though I cannot tell if it will really solve the issue. I'm not sure what is going on though.
Comment 3 Nicolas Fella 2025-08-05 11:00:09 UTC
Git commit 6f16a47ea622b243f3236e230dee225888113118 by Nicolas Fella.
Committed on 05/08/2025 at 11:00.
Pushed by nicolasfella into branch 'Plasma/6.4'.

Update event ID when replacing notification

The new notification might have a different event ID, so make sure it's updated
(cherry picked from commit 77f2df323715f8755099095cf4f030c3c1b67849)

M  +2    -0    kded/notification.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/6f16a47ea622b243f3236e230dee225888113118
Comment 4 Nicolas Fella 2025-08-05 11:08:07 UTC
Git commit 77f2df323715f8755099095cf4f030c3c1b67849 by Nicolas Fella.
Committed on 05/08/2025 at 10:59.
Pushed by nicolasfella into branch 'master'.

Update event ID when replacing notification

The new notification might have a different event ID, so make sure it's updated

M  +2    -0    kded/notification.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/77f2df323715f8755099095cf4f030c3c1b67849