Update event ID when replacing notification

The new notification might have a different event ID, so make sure it's updated

BUG: 507719
(cherry picked from commit 77f2df323715f8755099095cf4f030c3c1b67849)